--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Hello World</title>
-</head>
-<body>
-  <div style="text-align:center;">
-    <h1>Hello World</h1>
-  </div>
-</body>
+  <head>
+    <title>Hello World</title>
+  </head>
+  <body>
+    <div style="text-align: center">
+      <h1>Hello World</h1>
+      <a href="/page">Go To Page</a>
+    </div>
+  </body>
 </html>
